Fix loading of report attribute "includingBudgetActuals"

The budget report attribute "includingBudgetActuals" was not handled
correctly when a file was loaded into memory.

Existing files showing a problem cannot be fixed automatically. The
respective reports need to be recreated by the user.

Also, some more attributes needed a fixed seed to solve issue #396978.

BUG: 406608
FIXED-IN: 5.0.4